8246051: SIGBUS by unaligned Unsafe compare_and_swap

Reviewed-by: aph